recursion.lessons.recursion.koch.Koch.scala.error
Koch:28: error: ';' expected but 'else' found.
	else return;
        ^Koch:34: error: expected start of definition
	override def run() {
                 ^Koch:37: error: Unmatched closing brace '}' ignored here
}
^